--- a/Style/style.css
+++ b/Style/style.css
@@ -218,6 +218,16 @@ h2{
     margin-top: 80px;
 }
 
+.cityLike {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    margin-top: 35px;
+    margin-left: 18px;
+}
+
 .like {
     position: absolute;
     left: 240px;
