--- a/Style/style.css
+++ b/Style/style.css
@@ -202,7 +202,7 @@ h1{
     padding: 20px;
 }
 
-h2{
+.thisCity {
     margin-left: 12px;
     font-family: Roboto;
     font-style: normal;
@@ -219,13 +219,30 @@ h2{
 }
 
 .cityLike {
+    display: flex;
+    width: 280px;
+    height: 30px;
+    margin-top: 35px;
+    margin-left: 18px;
+}
+
+.cityLike h2{
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
-    line-height: 28px;
-    margin-top: 35px;
-    margin-left: 18px;
+    margin: 0;
+    vertical-align: center;
+}
+
+.delete {
+    width: 20px;
+    height: 20px;
+    border: none;
+    margin: auto;
+    margin-right: 17px;
+    background: url(../Style/cross.svg) no-repeat;
+    background-size: cover;
 }
 
 .like {
