--- a/Style/style.css
+++ b/Style/style.css
@@ -92,7 +92,7 @@ main {
 .tabs_info {
     width: 297px;
     height: 345px;
-
+    overflow-x: auto;
 }
 
 .inputRadio>input[type='radio'] {
@@ -273,6 +273,57 @@ p {
     line-height: 40px;
 }
 
-.content_2 {
+.content_2, .content_3 {
     padding-top: 33px;
 }
+.content_3 {
+    overflow-x: auto;
+}
+
+.forecast {
+    width: 265px;
+    height: 120px;
+    margin: auto;
+    border: 1px solid #000000;
+    display: grid;
+    grid-template-rows: 30px 20px 30px 30px;
+    grid-template-columns: 190px 75px;
+    margin-bottom: 9px;
+}
+
+.Date, .rain, .feelsTemp, .temp, .Time {
+    margin-top: 10px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+}
+
+.temp {
+    grid-column: 1;
+    grid-row: 3;
+}
+
+.rain {
+    grid-column: 2;
+    grid-row: 3;
+}
+
+.feelsTemp{
+    grid-column: 1;
+    grid-row: 4;
+}
+
+.thisCloud {
+    grid-column: 2;
+    grid-row: 4;
+    background: url(../Style/cloud.svg) no-repeat;
+    background-size: cover;
+
+    width: 40px;
+    height: 40px;
+    margin: 0px auto;
+}
+
+
